recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:2: error: Missing closing brace `}' assumed here
def occurrences(l:List[Int], v:Int): Int = {
^Occurrences:2: error: expected class or object definition
def occurrences(l:List[Int], v:Int): Int = {
^