recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  if (l == 0){
    return 0;
  }
  else if (l.head == v) {
    return 1 + occurence(l.tail, v);
  }
  else {
   {
    return 0 + occurence(l.tail, v);
  }
}